--- a/MenuPlanner/Calender.css
+++ b/MenuPlanner/Calender.css
@@ -14,15 +14,15 @@
     width: 100%;
 }
 
-#PersonListContainer {
+#MealContainer {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
 }
 
-.personContainer {
-    width: 20%;
+.MealItem {
+    width: 80%;
     display: flex;
     flex-direction: column;
     text-align: center;
